# multi-agent-peer-review

./: .env  API_CALLS_MAP.md  COMPLETE_SETUP_SUMMARY.md  EXAMPLES_MODEL_SWITCHING.md  LLM_CLIENTS_GUIDE.md  LLM_SETUP_DONE.md  README.md  SETUP_SUMMARY.md  START_HERE.md  dev_server.py  pyproject.toml
src/peer_review_mcp/: __main__.py  config.py  llm_parsing.py  llm_reviewer.py  models.py  server.py
src/peer_review_mcp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/peer_review_mcp/LLM/: __init__.py  chatgpt_client.py  claude_client.py  claude_opus_client.py  gemini_client.py  limiter.py  synthesis_client.py
src/peer_review_mcp/models/: polish_comment.py  review_point.py  review_result.py
src/peer_review_mcp/orchestrator/: central_orchestrator.py
src/peer_review_mcp/prompts/: answer_synthesis.py  baseline_answer.py  clarity_validation.py  phase_a_decision.py  polish_synthesis.py  polishing.py  validation.py
src/peer_review_mcp/reviewers/: ClarityReviewer.py  RiskReviewer.py  base.py  gemini_clarity_reviewer.py  gemini_reviewer.py  reviewers.py
src/peer_review_mcp/tools/: answer_tool.py  baseline_answer_tool.py  polishing_engine.py  synthesis_engine.py  validate_tool.py  validation_engine.py
src/tests/: conftest.py  test_coverage_targets.py  test_env_var_gates.py  test_llm_concurrency.py  test_llm_parsing.py  test_more_coverage.py  test_phase_decisions.py  test_run_phase_a_and_baseline.py
